midpoint-live-demo/base/objects/ldap/ldap-admin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpldapadmin-ingress
spec:
  tls:
    - hosts:
        - demo.example.com
      secretName: cert-mp-demo
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /ldapadmin
            pathType: Prefix
            backend:
              service:
                name: ldap-admin-service
                port:
                  number: 1389
